--- a/client/modules/core/main.html
+++ b/client/modules/core/main.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Hau Code Challenge</title>
 </head>
 <body>
     <div id="reactRoot"></div>
